--- a/style.css
+++ b/style.css
@@ -5,39 +5,39 @@
 
   font-size: 62.5%;
 
-  --bg-color: #f0f0f0;
+  --bg-color: rgba(148, 172, 156, 0.241);
+  --bg-color-field: #f0f0f0;
   --invalid-color: #8e1717;
   --text-color: #333333;
+  --logo-text-color: #e9e9e9;
 }
 
 @font-face {
-    font-family: 'Source Sans Pro';
-    src: url('./font/SourceSansPro-Bold.woff2') format('woff2'),
-        url('./font/SourceSansPro-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Source Sans Pro";
+  src: url("./font/SourceSansPro-Bold.woff2") format("woff2"),
+    url("./font/SourceSansPro-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Source Sans Pro';
-    src: url('./font/SourceSansPro-Regular.woff2') format('woff2'),
-        url('./font/SourceSansPro-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Source Sans Pro";
+  src: url("./font/SourceSansPro-Regular.woff2") format("woff2"),
+    url("./font/SourceSansPro-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Norse';
-    src: url('./font/Norse-Bold.woff2') format('woff2'),
-        url('./font/Norse-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Norse";
+  src: url("./font/Norse-Bold.woff2") format("woff2"),
+    url("./font/Norse-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
-
-
 
 body {
   font-size: 1.6rem;
@@ -48,12 +48,17 @@ body {
   /* width: 100%; */
 }
 
+.logo-section,
+main {
+  padding-top: 6rem;
+}
+
 /* Nav Section */
 nav {
   position: absolute;
   width: 100%;
   height: 5rem;
-  background-color: rgba(148, 172, 156, 0.241);
+  background-color: var(--bg-color);
 }
 
 nav ul {
@@ -64,24 +69,102 @@ nav ul li {
   text-decoration: none;
   list-style: none;
 
-  font-family:'Source Sans Pro', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Source Sans Pro", "Gill Sans", "Gill Sans MT", Calibri,
+    "Trebuchet MS", sans-serif;
 
   margin-left: 1.5em;
 
-  color: var(--text-color)
+  color: var(--bg-color-field);
 }
 
 /* Heading Logo Section */
 .logo-section {
-  background: no-repeat url("./assets/degleex-ganzorig-wQImoykAwGs-unsplash.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)),
+    url("./assets/degleex-ganzorig-wQImoykAwGs-unsplash.jpg");
   background-size: cover;
   background-position-x: center;
+
+  width: 37%;
+  margin-right: 1.2rem;
+
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.logo-section p {
+  color: var(--logo-text-color);
+}
+
+.logo-container{
+  height: 100%;
+  align-content: center;
+}
+
+.logo-img {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--bg-color);
+}
+
+.logo-img img {
+  width: 10rem;
+  position: relative;
+  bottom: 1.2rem;
+}
+
+.logo-img img + p {
+  font-family: "Norse", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 10rem;
+  padding-top: 1rem;
+
+}
+
+.image-credit {
+  align-content: center;
+  display: flex;
+  justify-content: center;
+}
+
+.image-credit a:any-link {
+  color: var(--logo-text-color);
+}
+
+.image-credit a:visited {
+  color: #9e9e9e;
+  text-decoration: none;
 }
 
 
+
+
+
+.image-credit a:hover,
+.image-credit a:focus {
+  text-decoration: none;
+}
+
+.image-credit a:focus:visited {
+  outline: 1px solid #9e9e9e;
+
+}
+
+.image-credit a:focus {
+  outline: 1px solid var(--logo-text-color);
+  border-radius: 2px;
+}
+
+.image-credit a:active {
+  color:var(--text-color)
+}
+
 /* Main Form Section */
 
-input{
+input {
   font-family: inherit;
   font-size: inherit;
 }
