--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 :root {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-
   font-size: 62.5%;
 
   --bg-color: rgba(148, 172, 156, 0.241);
   --bg-color-field: #f0f0f0;
-  --invalid-color: #8e1717;
   --text-color: #333333;
   --logo-text-color: #e9e9e9;
+
+  --logo-width: 37%;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 @font-face {
@@ -48,13 +51,13 @@ body {
   /* width: 100%; */
 }
 
-.logo-section,
+/* .logo-section,
 main {
-  padding-top: 6rem;
-}
+  padding-top: 5rem;
+} */
 
 /* Nav Section */
-nav {
+/* nav {
   position: absolute;
   width: 100%;
   height: 5rem;
@@ -73,55 +76,54 @@ nav ul li {
     "Trebuchet MS", sans-serif;
 
   margin-left: 1.5em;
-
   color: var(--bg-color-field);
-}
+} */
 
 /* Heading Logo Section */
 .logo-section {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)),
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.01)),
     url("./assets/degleex-ganzorig-wQImoykAwGs-unsplash.jpg");
   background-size: cover;
   background-position-x: center;
 
-  width: 37%;
-  margin-right: 1.2rem;
+  width: var(--logo-width);
+  /* margin-right: 5rem; */
 
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
+
+  box-shadow: 0px 5px 50px 1px rgba(0, 0, 0, 0.193);
 }
 
 .logo-section p {
   color: var(--logo-text-color);
 }
 
-.logo-container{
+.logo-container {
   height: 100%;
   align-content: center;
 }
 
 .logo-img {
-
   display: flex;
   justify-content: center;
   align-items: center;
 
   background-color: var(--bg-color);
+  height: 20vh;
 }
 
 .logo-img img {
   width: 10rem;
   position: relative;
-  bottom: 1.2rem;
+  bottom: 0.4rem;
 }
 
 .logo-img img + p {
   font-family: "Norse", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 10rem;
-  padding-top: 1rem;
-
+  padding-top: 2rem;
 }
 
 .image-credit {
@@ -139,10 +141,6 @@ nav ul li {
   text-decoration: none;
 }
 
-
-
-
-
 .image-credit a:hover,
 .image-credit a:focus {
   text-decoration: none;
@@ -150,7 +148,6 @@ nav ul li {
 
 .image-credit a:focus:visited {
   outline: 1px solid #9e9e9e;
-
 }
 
 .image-credit a:focus {
@@ -159,12 +156,95 @@ nav ul li {
 }
 
 .image-credit a:active {
-  color:var(--text-color)
+  color: var(--text-color);
 }
 
 /* Main Form Section */
 
+main {
+  width: calc(100vw - var(--logo-width));
+
+  display: flex;
+  flex-direction: column;
+
+  background-color: #f9f9f9;
+  --headline-height: 34vh;
+
+  font-family: "Source Sans Pro", "Franklin Gothic Medium", "Arial Narrow",
+    Arial, sans-serif;
+}
+
+.head-line,
+fieldset {
+  padding-left: 5rem;
+}
+
+.head-line {
+  font-size: 2.8rem;
+  font-weight: bold;
+
+  height: var(--headline-height);
+
+  align-content: center;
+}
+
+.head-line p {
+  line-height: 1.8;
+}
+
+.form-section {
+  height: calc(100vh - var(--headline-height) - 5rem);
+
+  --invalid-color: #8e1717;
+}
+
+fieldset {
+  border: none;
+  background-color: #fdfdfd;
+  box-shadow: 0 3px 10px 5px rgba(0, 0, 0, 0.1);
+  position: relative;
+  padding-top: 4rem;
+
+  height: 30vh;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+fieldset legend {
+  position: absolute;
+  top: 1rem;
+
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+fieldset p {
+  margin: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  height: 33%;
+}
+
+fieldset label {
+  width: 30ch;
+  padding-left: 0.1em;
+  margin-bottom: 0.3em;
+
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.3ch;
+  font-size: 80%;
+}
+
 input {
   font-family: inherit;
   font-size: inherit;
+  padding: 0 1ch;
+
+  width: 80%;
+  height: 2.2em;
 }
