--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ nav ul li {
 }
 
 .logo-container {
-  height: 100%;
+  height: 96%;
   align-content: center;
 }
 
@@ -130,6 +130,8 @@ nav ul li {
   align-content: center;
   display: flex;
   justify-content: center;
+
+  height: 2rem;
 }
 
 .image-credit a:any-link {
@@ -172,6 +174,7 @@ main {
 
   font-family: "Source Sans Pro", "Franklin Gothic Medium", "Arial Narrow",
     Arial, sans-serif;
+  color: var(--text-color);
 }
 
 .head-line,
@@ -225,8 +228,13 @@ fieldset p {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
+  padding-right: max(3rem, 3vw);
 
   height: 33%;
+
+  --invalid-color: rgba(199, 0, 0, 0.776);
+
 }
 
 fieldset label {
@@ -243,8 +251,69 @@ fieldset label {
 input {
   font-family: inherit;
   font-size: inherit;
+  
   padding: 0 1ch;
-
-  width: 80%;
+  width: 100%;
   height: 2.2em;
+
+  border: 1px solid rgb(0, 116, 0);
+  border-radius: 3px;
+}
+
+input::placeholder {
+  opacity: 0.5;
+}
+
+input:user-invalid{
+ color: var(--invalid-color);
+}
+
+input:focus{
+
+  border: 1px solid rgb(0, 200, 0);
+  border-radius: 3px;
+  outline: none;
+}
+
+input:user-valid ~ span::before {
+  content: "✓";
+  position: absolute;
+  left: -1em;
+  bottom: 1em;
+  color: green;
+  font-size: 120%;
+}
+
+
+input:user-invalid ~ span::after {
+  content: "Only alphabets are allowed";
+  position: absolute;
+  bottom: -0.5em;
+  right: min(3.4em, 3vw);
+  padding: 0 1ch;
+  color: var(--invalid-color);
+  font-size: 80%;
+  /* background-color: var(--invalid-color); */
+  border-radius: 2px;
+}
+
+input[type="email"]:user-invalid ~ span::after {
+  content: "Please follow email format";
+}
+
+
+input[type="tel"]:user-invalid ~ span::after {
+  content: "Only numbers are allowed";
+}
+
+input[type="password"]:user-invalid ~ span::after {
+  content: "min of 8 characters long";
+}
+
+input:user-invalid:not(:focus) {
+  border: 1px solid var(--invalid-color);
+}
+
+label:has(~input:user-invalid:not(:focus)) {
+  opacity: 0.5;
 }
