--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 :root {
   font-size: 62.5%;
 
-  --bg-color: rgba(148, 172, 156, 0.241);
-  --bg-color-field: #f0f0f0;
   --text-color: #333333;
   --logo-text-color: #e9e9e9;
 
@@ -48,36 +46,7 @@ body {
 
   display: flex;
   min-height: 100vh;
-  /* width: 100%; */
 }
-
-/* .logo-section,
-main {
-  padding-top: 5rem;
-} */
-
-/* Nav Section */
-/* nav {
-  position: absolute;
-  width: 100%;
-  height: 5rem;
-  background-color: var(--bg-color);
-}
-
-nav ul {
-  display: flex;
-}
-
-nav ul li {
-  text-decoration: none;
-  list-style: none;
-
-  font-family: "Source Sans Pro", "Gill Sans", "Gill Sans MT", Calibri,
-    "Trebuchet MS", sans-serif;
-
-  margin-left: 1.5em;
-  color: var(--bg-color-field);
-} */
 
 /* Heading Logo Section */
 .logo-section {
@@ -87,7 +56,6 @@ nav ul li {
   background-position-x: center;
 
   width: var(--logo-width);
-  /* margin-right: 5rem; */
 
   display: flex;
   flex-direction: column;
@@ -109,7 +77,7 @@ nav ul li {
   justify-content: center;
   align-items: center;
 
-  background-color: var(--bg-color);
+  background-color: rgba(148, 172, 156, 0.241);
   height: 20vh;
 }
 
@@ -127,11 +95,13 @@ nav ul li {
 }
 
 .image-credit {
-  align-content: center;
   display: flex;
+  align-content: center;
   justify-content: center;
 
   height: 2rem;
+
+  --greyish: #9e9e9e;
 }
 
 .image-credit a:any-link {
@@ -139,7 +109,7 @@ nav ul li {
 }
 
 .image-credit a:visited {
-  color: #9e9e9e;
+  color: var(--greyish);
   text-decoration: none;
 }
 
@@ -149,7 +119,7 @@ nav ul li {
 }
 
 .image-credit a:focus:visited {
-  outline: 1px solid #9e9e9e;
+  outline: 1px solid var(--greyish);
 }
 
 .image-credit a:focus {
@@ -165,6 +135,9 @@ nav ul li {
 
 main {
   width: calc(100vw - var(--logo-width));
+  --bg-color-field: #f0f0f0;
+  --dark-green-rgb: 4, 63, 13;
+  --light-green-rgb: 0, 210, 0;
 
   display: flex;
   flex-direction: column;
@@ -183,7 +156,7 @@ fieldset {
 }
 
 .head-line {
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   font-weight: bold;
 
   height: var(--headline-height);
@@ -192,13 +165,19 @@ fieldset {
 }
 
 .head-line p {
-  line-height: 1.8;
+  line-height: 1.5;
 }
 
 .form-section {
   height: calc(100vh - var(--headline-height) - 5rem);
 
   --invalid-color: #8e1717;
+}
+
+fieldset,
+fieldset p {
+  display: flex;
+  flex-direction: column;
 }
 
 fieldset {
@@ -210,8 +189,6 @@ fieldset {
 
   height: 30vh;
 
-  display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
 }
 
@@ -224,17 +201,14 @@ fieldset legend {
 }
 
 fieldset p {
-  margin: 1rem 0;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   position: relative;
-  padding-right: max(3rem, 3vw);
 
+  padding-right: max(3rem, 3vw);
+  margin: 1rem 0;
   height: 33%;
 
   --invalid-color: rgba(199, 0, 0, 0.776);
-
 }
 
 fieldset label {
@@ -251,12 +225,12 @@ fieldset label {
 input {
   font-family: inherit;
   font-size: inherit;
-  
+
   padding: 0 1ch;
   width: 100%;
-  height: 2.2em;
+  height: 2.4em;
 
-  border: 1px solid rgb(0, 116, 0);
+  border: 1px solid rgb(var(--dark-green-rgb));
   border-radius: 3px;
 }
 
@@ -264,13 +238,12 @@ input::placeholder {
   opacity: 0.5;
 }
 
-input:user-invalid{
- color: var(--invalid-color);
+input:user-invalid {
+  color: var(--invalid-color);
 }
 
-input:focus{
-
-  border: 1px solid rgb(0, 200, 0);
+input:focus {
+  border: 1px solid rgba(var(--light-green-rgb), 0.8);
   border-radius: 3px;
   outline: none;
 }
@@ -280,10 +253,9 @@ input:user-valid ~ span::before {
   position: absolute;
   left: -1em;
   bottom: 1em;
-  color: green;
+  color: rgb(var(--dark-green-rgb));
   font-size: 120%;
 }
-
 
 input:user-invalid ~ span::after {
   content: "Only alphabets are allowed";
@@ -300,7 +272,6 @@ input[type="email"]:user-invalid ~ span::after {
   content: "Please follow email format";
 }
 
-
 input[type="tel"]:user-invalid ~ span::after {
   content: "Only numbers are allowed";
 }
@@ -313,7 +284,7 @@ input:user-invalid:not(:focus) {
   border: 1px solid var(--invalid-color);
 }
 
-label:has(~input:user-invalid:not(:focus)) {
+label:has(~ input:user-invalid:not(:focus)) {
   opacity: 0.5;
 }
 
@@ -324,38 +295,36 @@ button {
   font-size: 1.6rem;
   line-height: 1.5;
 
-  background-color: rgba(4, 63, 13, 0.805);
-  border: 1px solid rgba(0, 238, 0, 0.664);
+  background-color: rgb(var(--dark-green-rgb), 0.8);
+  border: 1px solid rgba(var(--light-green-rgb), 0.664);
   border-radius: 5px;
   color: var(--logo-text-color);
-  box-shadow: 2px 3px 10px 3px rgba(4, 63, 13, 0.1);
+  box-shadow: 2px 3px 10px 3px rgba(var(--dark-green-rgb), 0.1);
 }
 
 button:hover,
 button:focus {
-  background-color: rgba(4, 63, 13, 0.05);
+  background-color: rgb(var(--dark-green-rgb), 0.05);
+
   color: var(--text-color);
-  border-color: rgb(0, 238, 0);
+  border-color: rgb(var(--light-green-rgb));
 }
 
 button:active {
   position: relative;
   top: 2px;
   left: 1px;
-  box-shadow: 1px 2px 8px 1px rgba(4, 63, 13, 0.1);
-  background-color: rgba(4, 63, 13, 0.08);
-
+  box-shadow: 1px 2px 8px 1px rgba(var(--dark-green-rgb), 0.1);
+  background-color: rgba(var(--dark-green-rgb), 0.08);
 }
-
-
 
 .login-link {
   margin-top: 1em;
   padding-left: 4.2em;
 }
 
-.login-link a{
-  color:rgba(4, 63, 13, 0.597);
+.login-link a {
+  color: rgba(var(--dark-green-rgb), 0.6);
 }
 
 .login-link a:hover,
@@ -363,10 +332,10 @@ button:active {
   text-decoration: none;
 }
 
-.login-link a:active{
-  color:rgba(4, 63, 13);
+.login-link a:active {
+  color: rgba(var(--dark-green-rgb));
 }
 
-.login-link a:visited{
+.login-link a:visited {
   text-decoration: none;
 }
